# open_transcribe

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: minimal_streaming.py  type_to_cursor.py
src/: __init__.py  audio_stream.py  config.py  main.py  text_output.py
src/ui/: __init__.py  app.py
