[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-transcribe"
version = "0.1.0"
description = "CPU-optimized, open-source speech-to-text with streaming transcription and terminal UI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Open Transcribe Contributors"}
]

requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.0.0",
    "realtimestt>=0.0.12",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "webrtcvad>=2.0.10",
    "textual>=0.70.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Repository = "https://github.com/yourusername/open-transcribe"
Issues = "https://github.com/yourusername/open-transcribe/issues"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
