[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-transcribe"
version = "0.1.0"
description = "CPU-optimized, open-source speech-to-text with streaming transcription and terminal UI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Open Transcribe Contributors"}
]

requires-python = ">=3.10"
dependencies = [
    "realtimestt>=0.3.104",
    "sounddevice>=0.4.6",
    "numpy>=1.26.4",
    "webrtcvad>=2.0.10",
    "textual>=0.70.0",
    "rich>=13.7.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Repository = "https://github.com/sovit-123/open_transcribe"
Issues = "https://github.com/sovit-123/open_transcribe/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
